tests/paczka2/big_fuzzy/16838024.err
Error in line 8: ODy8A S932 68,6
Error in line 16: 0hcngM8gFYf S932 43,8
Error in line 15: qG5Efq S932 13,2
Error in line 11: QziQBvD A34 88,6
Error in line 24: qG5Efq A34 28,0
Error in line 31: QziQBvD A34 81,59
Error in line 25: QziQBvD S139 44,8
Error in line 35: QziQBvD A669 21,9
Error in line 47: qG5Efq A34 86,6
Error in line 50: qG5Efq A669 54,5
Error in line 43: Fcle A669 17,5
Error in line 68: voF S139 32,9
Error in line 86: 0hcngM8gFYf S932 72,1
Error in line 96: QziQBvD S139 53,5
Error in line 101: qG5Efq A34 16,4
Error in line 102: qG5Efq S139 99,8
Error in line 114: voF S932 57,5
Error in line 122: 0hcngM8gFYf A669 7,6
Error in line 132: QziQBvD A669 91,1
Error in line 143: Fcle S139 17,2
Error in line 146: QziQBvD S932 37,6
Error in line 160: 0hcngM8gFYf A669 9,6
Error in line 163: voF S932 47,6
Error in line 194: QziQBvD A34 71,6
Error in line 192: Fcle S139 53,2
Error in line 204: ODy8A A34 308,1
Error in line 215: ODy8A A669 81,8
Error in line 234: voF S932 65,1
Error in line 228: qG5Efq S932 55,9
Error in line 238: 0hcngM8gFYf A669 39,9
